--- a/hemocycle/backend/package.json
+++ b/hemocycle/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "xss": "^1.0.15",
     "xss-clean": "^0.1.4"
   }
 }
